--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
+html, body, div {
+  font-family: 'Open Sans', sans-serif;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .logo {
